--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test --browser=ChromeHeadless --code-coverage --watch=false",
+    "test": "ng test Slogin --code-coverage & ng test seeker --code-coverage",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
