--- a/proxy.config.json
+++ b/proxy.config.json
@@ -1,14 +1,14 @@
 {
-    "/seeker-registration/*": {
-      "target": "http://192.168.252.43:8765/seeker-registration",
+    "/api/*": {
+      "target": "http://192.168.252.43:8765/seeker-registration/*",
       "secure": false,
-
+      "changeOrigin": true,
       "logLevel": "debug"
     },
     "/job-application/*": {
-        "target": "http://192.168.252.38:8765/job-application/",
+        "target": "http://192.168.252.43:8765/job-application/*",
         "secure": false,
-  
+        "changeOrigin": true,
         "logLevel": "debug"
       }
   }
